@@ -23,7 +23,7 @@ SCAN_OPTIONS=--deprecated-guards="GTKDOC_TESTER_DISABLE_DEPRECATED" \
   2>&1 | tee gtkdoc-scan.log
 
 # Extra options to supply to gtkdoc-mkdb.
-MKDB_OPTIONS=--sgml-mode --name-space=bug 2>&1 | tee gtkdoc-mkdb.log
+MKDB_OPTIONS=--sgml-mode 2>&1 | tee gtkdoc-mkdb.log
 
 # Extra options to supply to gtkdoc-mktmpl
 # e.g. MKTMPL_OPTIONS=--only-section-tmpl
