@@ -21,12 +21,11 @@
 
   <index id="api-index">
     <title>API Index</title>
+    <xi:include href="xml/api-index-full.xml"><xi:fallback /></xi:include>
   </index>
   <index id="deprecated-api-index" role="deprecated">
     <title>Index of deprecated API</title>
+    <xi:include href="xml/api-index-deprecated.xml"><xi:fallback /></xi:include>
   </index>
-  <!--index id="api-index-0-9" role="0.9">
-    <title>Index of new API in 0.9</title>
-  </index-->
 
 </book>
